--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -29,7 +29,7 @@
       </div>
       <h2>Informations</h2>
       <h3>about this design</h3>
-      <p>This design was produced in less than 5 hours on a rainy afternoon. Its thought as a community layout but feel free to modify it for an other type of website. You shouldn't have any problems with diffrent machines and browsers because it's valid <a href="http://validator.w3.org/check?uri=referer">XHTML 1.0 transitional</a> and CSS 2. Verdana and Georgia are used as the main-fonttypes, except them only Arial is used. The text is displayed in 12px, Verdana, left-aligned and with an line-hieght of 20px (1,7em).</p>
+      <p>This design was produced in less than 5 million hours on a rainy afternoon. Its thought as a community layout but feel free to modify it for an other type of website. You shouldn't have any problems with diffrent machines and browsers because it's valid <a href="http://validator.w3.org/check?uri=referer">XHTML 1.0 transitional</a> and CSS 2. Verdana and Georgia are used as the main-fonttypes, except them only Arial is used. The text is displayed in 12px, Verdana, left-aligned and with an line-hieght of 20px (1,7em).</p>
       <h3>the stylesheet</h3>
       <p>The Cascading StyleSheet is structured in a special way. At the top you'll find the definitions for all the main boxes which keep the layout in form. Under that you can find the definition for dark-gray 'latest'-box. In all these catergories the items again ordered alphabetically. The 3<sup>rd</sup> category is for the elementsin the #content-container. At last there you can find the definitions for the sidepanel.</p>
       <h3>using it</h3>
